--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^1.9.5",
+    "css-doodle": "^0.34.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "redux": "^4.2.1"
