--- a/package.json
+++ b/package.json
@@ -16,14 +16,17 @@
     "@reduxjs/toolkit": "^1.9.5",
     "css-doodle": "^0.34.9",
     "i18next": "^23.2.3",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.0.1",
+    "react-lottie": "^1.2.4",
     "redux": "^4.2.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
+    "@types/react-lottie": "^1.2.10",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
     "@vitejs/plugin-react-swc": "^3.0.0",
